20100113 version: openal-ada 1.1.0
20100113 code: imported installer 2.3.1
20100113 version: openal-ada 1.1.1
20100114 code: parameter renaming in OpenAL.Extension.EFX_Thin (Values -> Value).
20100114 code: all previously missing parameter constants now available
               in OpenAL.Extension.EFX_Thin.
20100114 code: OpenAL.Extension.EFX effect type/parameter setting implemented.
20100114 code: OpenAL.Extension.EFX filter type/parameter setting implemented.
20100114 code: OpenAL.Extension.EFX source, listener and context extensions
               implemented.